Segunda carga bloques menu

--- a/menu.html
+++ b/menu.html
@@ -44,8 +44,118 @@
 
 		<!-- bloques para menú -->
 		<div id=bmn>
-			<div></div>
-			<div></div>
+			<div id=pp>
+				<div id=pp1 align="center"><p id=pp1 >PLATILLOS PRINCIPALES</p></div>
+				<hr id=pp>
+			</div>
+
+			<!-- Platillo 1 -->
+			<div id=pt1>
+				<div id=tcs><p id=tcs>TACOS</p></div>
+				<img src="img/tacos.png">
+
+			</div>
+			
+			<!-- Platillo 2 -->
+			<div id=pt2>
+				<hr>
+				<div id=pzl><p id=pzl>POZOLE</p></div>
+				<img src="img/pozole.png">
+				
+
+			</div>
+
+			<!-- Platillo 3 -->
+			<div id=pt3>
+				<hr>
+				<div id=pzl><p id=pzl>SOPES</p></div>
+				<img src="img/sope.png">
+			</div>
+
+			<!-- Platillo 4 -->
+			<div id=pt4>
+				<hr>
+			</div>
+
+			<hr id=d1 width="820px">
+			
+			<!-- Seccion 2-->
+			<!-- Platillo 5 -->
+			<div id=pt5>
+				
+
+			</div>	
+			
+			<!-- Platillo 6 -->
+			<div id=pt6>
+				<hr>
+			</div>
+
+
+			<!-- Platillo 7 -->
+			<div id=pt7>
+				<hr>
+			</div>
+
+			<!-- Platillo 8 -->
+			<div id=pt8>
+				<hr>
+			</div>
+
+			<hr id=d2 width="820px">
+		
+
+			<!-- Paquetes -->
+			<div id=tpq>
+				<div id=pp1 align="center"><p id=pp1 >PAQUETES</p></div>
+				<hr id=pp>
+
+			</div>
+
+			<!-- Paquete 1 -->
+			<div id=pqt1>
+				<div id=pp2 align="center"><p id=pp2 >PA' QUE TE ATASQUES</p></div>
+
+			</div>
+
+			<!-- Paquete 2 -->
+			<div id=pqt2>
+				<div id=pp3 align="center"><p id=pp3 >PA' QUE TE EMPACHES</p></div>
+
+			</div>
+
+
+			<!-- Paquete 3 -->
+			<div id=pqt3>
+				<div id=pp4 align="center"><p id=pp4 >PA' QUE TE CONSIENTAS</p></div>
+
+			</div>
+			<!-- FIN Paquetes -->
+
+
+			<!-- POSTRES -->
+			<div id=pst>
+				<div id=psts align="center"><p id=psts >POSTRES</p></div>
+			</div>
+			<!-- FIN POSTRES -->
+
+
+
+
+			<!-- BEBIDAS -->
+			<div id=beb>
+				<div id=bebs align="center"><p id=bebs >BEBIDAS</p></div>
+			</div>
+			<!-- FIN BEBIDAS -->
+
+
+
 		</div>
+
+
+
+
+
+	</div>
 </body>
 </html>
