tercer carga menu completo

--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
 		<!-- Aqui comienza el bloque para el encabezado -->
 		<div id='menu' align="left">
 			 <div id='logo' align="center">
-			 	<a href=""><img id = logo src="img/icono.png"></a>
+			 	<a href="file:///C:/Users/Espinosa/Documents/PROGRAMACION%20WEB/ProyectoFinalPW/PF_Restaurante/PFR/index.html"><img id = logo src="img/icono.png"></a>
 			 </div>
+			 
+			 <div id=icm><img id=icm src="img/imenu.png"></div>
 
 			 <div id='cmnu' align="center"><a id='cmnu' href=""><STYLE>A{text-decoration:none;}</STYLE><div align="CENTER">
 			 	MENU
 			 </div></a></div>
 
-			 <div id='cgal' align="center"><a id='cgal' href=""><div align="CENTER">
+			 <div id=gal><img id=gal src="img/gal.png"></div>
+
+			 <div id='cgal' align="center"><a id='cgal' href="file:///C:/Users/Espinosa/Documents/PROGRAMACION%20WEB/ProyectoFinalPW/PF_Restaurante/PFR/menu.html"><div align="CENTER">
 			 	GALERIA
 			 </div></a></div>
+
+			 <div id=prom><img id=prom src="img/prom.png"></div>
 
 			<div id='cprom' align="center"><a id='cprom' href=""><div align="CENTER">
 			 	PROMOCIONES
@@ -69,11 +75,19 @@
 
 		<!-- Empieza pie de página-->
 		<div id=pdp>
-			<div id= datos align="center">
+			<div id= datos align="left">
 				<p id=uni>Universidad Nacional Autónoma de México<br>FES Aragón</p>
 				<p id=mat>Programación web</p>
 				<p id=nom>Realizado por: Heili Espinosa</p>
 			</div>
+
+
+			<div id=direccion>
+				<p id=uni>VISÍTANOS EN:</p>
+				<p id=uni>Calle 23 de Abril #304<br>Col. Primavera  CP. 55250<br>Ciudad de México, México.</p>
+
+			</div>
+
 
 			<div id=contacto align="center">
 				<p id=con>CONTACTO</p>
@@ -87,7 +101,7 @@
 				</div>
 			</div>
 		</div>
-
+		<!-- Termina pie de página-->
 	</div>
 </body>
 </html>
