pag galeria terminada

--- a/galeria.html
+++ b/galeria.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BELAKY-Mexican Food&Drink</title>
-	<link rel="stylesheet" type="text/css" href="estilos.css">
+	<title>Galeria-Belaky</title>
+	<link rel="stylesheet" type="text/css" href="estilos3.css">
 	<link id=favicon rel="icon" type="png" href="img/favicon.png">
 </head>
-<body bgcolor="black">
+	<meta charset="utf-8">
+<body>
+	<body bgcolor="#474747">
 
 	<!-- Aqui comienza el bloque del contenido de esta primera pagina-->
 	<div id="contenedor">
@@ -39,39 +41,60 @@
 		</div>	
 		<!-- Aqui termina el bloque para el encabezado -->
 
-
 		<br>
-		<!-- Aqui empieza el bloque para el slogan -->
+		<!-- Aqui empieza el bloque para etiq pres -->
 		<div id = platillos align="center">
-			<div id = plat align="center"><p id=plat align="center">Platillos VERDADERAMENTE mexicanos</p></div>
+			<div id = plat align="center"><p id=plat align="center">¿SE TE ANTOJÓ ALGO?</p></div>
 		</div>
-		<!-- Aqui termina el bloque para el slogan -->
+		<!-- Aqui termina el bloque para etiq pres-->
 		<br>
+
+		<!-- Aqui empieza el bloque para las imágns-->
+		<div id= img align="center">
+			<div id=im1>	
+				<div id=taq><img id=taq src="img/taq.png">
+				<div id=desc align="center"><p id=desc>ATRÉVETE A PROBARLOS</p></div>
+				</div>
 			
-		<!-- Div circulo central -->
-		<div id = circle align="center">
-			<img id=cent src="img/cent.png">
+			</div>
+
+			<div id=im2>	
+				<div id=poz><img id=poz src="img/poz.png"></img>
+				<div id=desc2 align="center"><p id=desc2>DELÉITATE CON SU<br>DELICIOSO SABOR</p></div>
+			</div></div>
+
+			<div id=im3>	
+				<div id=birr><img id=poz src="img/birr.png"></img>
+				<div id=desc3 align="center"><p id=desc3>¡DELICIOSO! &#128523<br>DISFRUTA EN PLATO O TACOS</p></div>
+			</div></div>
+
+			<div id=im4>	
+				<div id=sop><img id=sop src="img/sop.png"></img>
+				<div id=desc4 align="center"><p id=desc4>¡NO TE LIMITES! &#129321</p></div>
+			</div></div>
+
+			<div id=im5>	
+				<div id=coch><img id=coch src="img/coch.png"></img>
+				<div id=desc5 align="center"><p id=desc5>DONDE CABEN DOS TAQUITOS CABEN 3 &#128527</p></div>
+			</div></div>
+
+			<div id=im6>	
+				<div id=qg><img id=qg src="img/qg.png"></img>
+				<div id=desc6 align="center"><p id=desc6>ANTOJITOS 100% MEXICANOS &#128525</p></div>
+			</div></div>
+
+			<div id=im7>	
+				<div id=pst><img id=pst src="img/pst.png"></img>
+				<div id=desc7 align="center"><p id=desc7>AZUCAR Y CANELA HACEN LA VIDA BUENA &#128512</p></div>
+			</div></div>
+
+			<div id=im8>	
+				<div id=pst><img id=pst src="img/beb.png"></img>
+				<div id=desc8 align="center"><p id=desc8>PA' LA ENCHILADA &#129397</p></div>
+			</div></div>
 		</div>
-		<!-- termina Div circ central -->
+		<!-- Aqui termina el bloque para imgs-->
 
-
-		<!-- Comienza bloque horarios-->
-		<div id = hor align="center">
-			<p id=hor>Visítanos</p>
-			<p id=hor>Lunes a sábado: <br>9:00am a 9:00pm</p>
-			<p id=hor>Domingo: <br>11:00am a 9:00pm</p>
-		</div>
-
-
-
-		<!-- Comienza bloque "acerca de nosotros"-->
-		<div id='adn'>
-			<div id=adn1><p id=adn1>SOBRE NOSOTROS...</p></div>
-			<div id=adn2><p id=adn2>Somos un restaurante 100% mexicano, nuestro propósito es</p>
-			<p id=adn2>alegrar tu paladar con platillos con sazón auténticamente</p>
-			<p id=adn2>mexicano, preparado con ingredientes de calidad.</p></div>
-		</div>
-		<!-- Termina bloque "acerca de nosotros"-->
 
 		<!-- Empieza pie de página-->
 		<div id=pdp>
@@ -102,6 +125,4 @@
 			</div>
 		</div>
 		<!-- Termina pie de página-->
-	</div>
-</body>
-</html>
+</div>
