--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
 	<link id=favicon rel="icon" type="png" href="img/favicon.png">
 </head>
 <body>
-	<body bgcolor="#474747">
+	<body bgcolor=black>
 
 	<!-- Aqui comienza el bloque del contenido de esta primera pagina-->
 	<div id="contenedor">
