carga final secciones completas

--- a/menu.html
+++ b/menu.html
@@ -13,26 +13,27 @@
 		<!-- Aqui comienza el bloque para el encabezado -->
 		<div id='menu' align="left">
 			 <div id='logo' align="center">
-			 	<a href="file:///C:/Users/Espinosa/Documents/PROGRAMACION%20WEB/ProyectoFinalPW/PF_Restaurante/PFR/index.html"><img id = logo src="img/icono.png"></a>
+			 	<a href="index.html"><img id = logo src="img/icono.png"></a>
 			 </div>
 			 
 			 <div id=icm><img id=icm src="img/imenu.png"></div>
 
-			 <div id='cmnu' align="center"><a id='cmnu' href=""><STYLE>A{text-decoration:none;}</STYLE><div align="CENTER">
+			 <div id='cmnu' align="center"><a id='cmnu' href="menu.html"><STYLE>A{text-decoration:none;}</STYLE><div align="CENTER">
 			 	MENU
 			 </div></a></div>
 
 			 <div id=gal><img id=gal src="img/gal.png"></div>
 
-			 <div id='cgal' align="center"><a id='cgal' href="file:///C:/Users/Espinosa/Documents/PROGRAMACION%20WEB/ProyectoFinalPW/PF_Restaurante/PFR/menu.html"><div align="CENTER">
+			 <div id='cgal' align="center"><a id='cgal' href="galeria.html"><div align="CENTER">
 			 	GALERIA
 			 </div></a></div>
 
 			 <div id=prom><img id=prom src="img/prom.png"></div>
 
-			<div id='cprom' align="center"><a id='cprom' href=""><div align="CENTER">
+			<div id='cprom' align="center"><a id='cprom' href="promo.html"><div align="CENTER">
 			 	PROMOCIONES
 			 </div></a></div>
+
 
 			 <div id='sbr' align="center">
 			 	<p id=sbr align="center">Auténtico sabor mexicano</p>
