--- a/promo.html
+++ b/promo.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BELAKY-Mexican Food&Drink</title>
-	<link rel="stylesheet" type="text/css" href="estilos.css">
+	<title>PROMOCIONES-BELAKY</title>
+	<link rel="stylesheet" type="text/css" href="estilos4.css">
 	<link id=favicon rel="icon" type="png" href="img/favicon.png">
 </head>
-<body bgcolor="black">
+	<meta charset="utf-8">
+<body>
+	<body bgcolor="black">
 
 	<!-- Aqui comienza el bloque del contenido de esta primera pagina-->
 	<div id="contenedor">
@@ -39,39 +41,34 @@
 		</div>	
 		<!-- Aqui termina el bloque para el encabezado -->
 
-
 		<br>
-		<!-- Aqui empieza el bloque para el slogan -->
+		<!-- Aqui empieza el bloque para etiq pres -->
 		<div id = platillos align="center">
-			<div id = plat align="center"><p id=plat align="center">Platillos VERDADERAMENTE mexicanos</p></div>
+			<div id = plat align="center"><p id=plat align="center">APROVECHA NUESTRAS PROMOCIONES</p></div>
 		</div>
-		<!-- Aqui termina el bloque para el slogan -->
+		<!-- Aqui termina el bloque para etiq pres-->
 		<br>
+
+		<!--COMIENZA PRIMER PROMOCION-->
+		<div id=prom1>
+			<img src="img/prom1.gif" alt="Funny image">
+
+		</div>
+
+		<div id=prom3 align="center">
+			<img src="img/prom3.gif" alt="Funny image">
+
+		</div>
+
+		<div id=prom2>
+			<img src="img/prom2.gif" alt="Funny image">
 			
-		<!-- Div circulo central -->
-		<div id = circle align="center">
-			<img id=cent src="img/cent.png">
-		</div>
-		<!-- termina Div circ central -->
-
-
-		<!-- Comienza bloque horarios-->
-		<div id = hor align="center">
-			<p id=hor>Visítanos</p>
-			<p id=hor>Lunes a sábado: <br>9:00am a 9:00pm</p>
-			<p id=hor>Domingo: <br>11:00am a 9:00pm</p>
 		</div>
 
+		
+			
+		
 
-
-		<!-- Comienza bloque "acerca de nosotros"-->
-		<div id='adn'>
-			<div id=adn1><p id=adn1>SOBRE NOSOTROS...</p></div>
-			<div id=adn2><p id=adn2>Somos un restaurante 100% mexicano, nuestro propósito es</p>
-			<p id=adn2>alegrar tu paladar con platillos con sazón auténticamente</p>
-			<p id=adn2>mexicano, preparado con ingredientes de calidad.</p></div>
-		</div>
-		<!-- Termina bloque "acerca de nosotros"-->
 
 		<!-- Empieza pie de página-->
 		<div id=pdp>
@@ -102,6 +99,6 @@
 			</div>
 		</div>
 		<!-- Termina pie de página-->
-	</div>
+
 </body>
 </html>
