Final fuentes corregidas

--- a/galeria.html
+++ b/galeria.html
@@ -85,7 +85,7 @@
 
 			<div id=im7>	
 				<div id=pst><img id=pst src="img/pst.png"></img>
-				<div id=desc7 align="center"><p id=desc7>AZUCAR Y CANELA HACEN LA VIDA BUENA &#128512</p></div>
+				<div id=desc7 align="center"><p id=desc7>AZÚCAR Y CANELA HACEN LA VIDA BUENA &#128512</p></div>
 			</div></div>
 
 			<div id=im8>	
